Avoid MKR_ variables name for variables which are not generated by Kconfig

--- a/base/Makefile
+++ b/base/Makefile
@@ -16,23 +16,23 @@ compile: ;
 
 # Installing stuff
 devices:
-	$(mkr-pkgdir)/mkdevices.sh "$(MKR_STAGING)" < $(dev_txt)
+	$(mkr-pkgdir)/mkdevices.sh "$(mkr-staging)" < $(dev_txt)
 
 # FIXME: needs fakeroot
 dirs:
-	for d in $(DIRS); do mkdir -p "$(MKR_STAGING)/$$d"; done
-	chmod a+rwx+t "$(MKR_STAGING)/tmp"
+	for d in $(DIRS); do mkdir -p "$(mkr-staging)/$$d"; done
+	chmod a+rwx+t "$(mkr-staging)/tmp"
 
 skel:
 	cd $(skeldir) && { \
 		find . -! -type d | while read f; do { \
-			install -D $$f "$(MKR_STAGING)/$$f"; \
+			install -D $$f "$(mkr-staging)/$$f"; \
 			sed -i \
 			's/@MKR_SERIAL_DEV@/'$(MKR_SERIAL_DEV)'/g;s/@MKR_SERIAL_BAUDRATE@/$(MKR_SERIAL_BAUDRATE)/g' \
-		"$(MKR_STAGING)/$$f"; \
+		"$(mkr-staging)/$$f"; \
 		}; \
 		done; \
-		install -D /etc/localtime "$(MKR_STAGING)/etc/localtime" || :; \
+		install -D /etc/localtime "$(mkr-staging)/etc/localtime" || :; \
 	}
 
 staging: devices dirs skel
