--- a/ltp/Makefile
+++ b/ltp/Makefile
@@ -5,7 +5,7 @@ LTP_PATH=$(shell echo $$PATH | sed 's/[^:]*distcc://g')
 sync-$(call not,$(MKR_LTP_MAINT)) := cp -a
 sync-$(MKR_LTP_MAINT) := rsync -a
 
-create-stamp := $(MKR_STAGING)/ltp/.mkr.dir-created
+create-stamp := $(mkr-staging)/ltp/.mkr.dir-created
 
 $(create-stamp): $(mkr-deps)
 	rm -Rf $(dir $@)
@@ -16,25 +16,25 @@ $(create-stamp): $(mkr-deps)
 # In maintainer mode, trigger a sync for every compilation
 ifeq ($(MKR_LTP_MAINT),y)
 do-sync: $(create-stamp)
-	$(sync-y) $(mkr-srcdir)/* $(MKR_STAGING)/ltp
+	$(sync-y) $(mkr-srcdir)/* $(mkr-staging)/ltp
 
-$(MKR_STAGING)/ltp/configure: do-sync ;
+$(mkr-staging)/ltp/configure: do-sync ;
 
 mkt-configure-args-y += --enable-maintainer-mode
 else
-$(MKR_STAGING)/ltp/configure: $(create-stamp)
-	$(sync-y) $(mkr-srcdir)/* $(MKR_STAGING)/ltp
+$(mkr-staging)/ltp/configure: $(create-stamp)
+	$(sync-y) $(mkr-srcdir)/* $(mkr-staging)/ltp
 endif
 
 compile: ;
 
 # Configure
-$(MKR_STAGING)/ltp/config.status: $(MKR_STAGING)/ltp/configure
+$(mkr-staging)/ltp/config.status: $(mkr-staging)/ltp/configure
 	cd $(dir $@) && ./configure $(mkr-configure-args-y)
 
 # Build
-staging: $(MKR_STAGING)/ltp/config.status
-	cd $(MKR_STAGING)/ltp && PATH=$(LTP_PATH) $(MAKE) \
+staging: $(mkr-staging)/ltp/config.status
+	cd $(mkr-staging)/ltp && PATH=$(LTP_PATH) $(MAKE) \
 	CROSS_COMPILE="$(mkr-cross)" \
 	CC="$(CC) $(cflags-y)" CXX="$(CXX) $(cflags-y)"
 	for dir in \
@@ -43,7 +43,7 @@ staging: $(MKR_STAGING)/ltp/config.status
 		testcases/bin/dumpdir \
 		output \
 		results; \
-	do mkdir -p $(MKR_STAGING)/ltp/$$dir || exit 1; done
+	do mkdir -p $(mkr-staging)/ltp/$$dir || exit 1; done
 
 confcheck-$(MKR_LTP_MAINT) := $(call confcheck-tool,rsync,MKR_LTP_MAINT)
 
