--- a/toolchain/Makefile
+++ b/toolchain/Makefile
@@ -39,8 +39,8 @@ bins-y := \
 
 # Installing stuff
 bins:
-	mkdir -p "$(MKR_STAGING)/bin" "$(MKR_STAGING)/sbin"\
-		"$(MKR_STAGING)/usr/bin" "$(MKR_STAGING)/usr/sbin"; \
+	mkdir -p "$(mkr-staging)/bin" "$(mkr-staging)/sbin"\
+		"$(mkr-staging)/usr/bin" "$(mkr-staging)/usr/sbin"; \
 	for b in $(bins-y); do \
 		for d in $(BINDIRS); do \
 			bin="$$d/$$b"; \
@@ -51,21 +51,21 @@ bins:
 				*/sbin/*) dest=sbin;; \
 				*) dest=bin;; \
 				esac; \
-				install -o 0 "$$bin" "$(MKR_STAGING)/$$dest"; \
+				install -o 0 "$$bin" "$(mkr-staging)/$$dest"; \
 				break; \
 			fi; \
 		done; \
 	done; \
-	sed -i 's/bash/ash/g' $(MKR_STAGING)/bin/ldd > /dev/null 2>&1 || :
+	sed -i 's/bash/ash/g' $(mkr-staging)/bin/ldd > /dev/null 2>&1 || :
 
 libs:
-	mkdir -p "$(MKR_STAGING)/lib" "$(MKR_STAGING)/usr/lib"; \
-	rm -f "$(MKR_STAGING)/lib32" "$(MKR_STAGING)/lib64" \
-		"$(MKR_STAGING)/usr/lib32" "$(MKR_STAGING)/usr/lib64"; \
-	ln -s lib "$(MKR_STAGING)/lib64"; \
-	ln -s lib "$(MKR_STAGING)/lib32"; \
-	ln -s lib "$(MKR_STAGING)/usr/lib64"; \
-	ln -s lib "$(MKR_STAGING)/usr/lib32"; \
+	mkdir -p "$(mkr-staging)/lib" "$(mkr-staging)/usr/lib"; \
+	rm -f "$(mkr-staging)/lib32" "$(mkr-staging)/lib64" \
+		"$(mkr-staging)/usr/lib32" "$(mkr-staging)/usr/lib64"; \
+	ln -s lib "$(mkr-staging)/lib64"; \
+	ln -s lib "$(mkr-staging)/lib32"; \
+	ln -s lib "$(mkr-staging)/usr/lib64"; \
+	ln -s lib "$(mkr-staging)/usr/lib32"; \
 	for l in $(libs-y); do \
 		case "$$l" in \
 		*.so) \
@@ -75,7 +75,7 @@ libs:
 					*usr/lib*) dest=usr/lib;; \
 					*) dest=lib;; \
 					esac; \
-					install -o 0 "$$d"/"$$l".[0-9] "$(MKR_STAGING)/$$dest"; \
+					install -o 0 "$$d"/"$$l".[0-9] "$(mkr-staging)/$$dest"; \
 					break; \
 				fi; \
 			done; \
@@ -87,7 +87,7 @@ libs:
 					*usr/lib*) dest=usr/lib;; \
 					*) dest=lib;; \
 					esac; \
-					install -o 0 "$$d"/"$$l"-*.so "$(MKR_STAGING)/$$dest"; \
+					install -o 0 "$$d"/"$$l"-*.so "$(mkr-staging)/$$dest"; \
 					break; \
 				fi; \
 			done; \
