--- a/linux/Makefile
+++ b/linux/Makefile
@@ -16,12 +16,14 @@ KERNELVERSION = $(VERSION).$(PATCHLEVEL).$(SUBLEVEL)
 
 # Patching the kernel with Xenomai
 ifeq ($(MKR_XENO),y)
+mkr-xeno-srcdir=$(call mksrcdir,$(MKR_XENO_SRCDIR))
+
 .mkr.prepared: .mkr.xeno
 	$(Q)echo Preparing linux sources directory...
 	$(Q)rm -f drivers/Makefile kernel/Makefile \
 		arch/$(MKR_KARCH)/Makefile init/Kconfig; \
 	lndir -silent -ignorelinks $(mkr-srcdir) && \
-	$(MKR_XENO_SRCDIR)/scripts/prepare-kernel.sh \
+	$(mkr-xeno-srcdir)/scripts/prepare-kernel.sh \
 		--linux=. --arch=$(MKR_KARCH) && \
 	: > .mkr.prepared
 	$(Q)echo Preparing linux sources directory...done.
