Generate reduced rootfs

--- a/base/Makefile
+++ b/base/Makefile
@@ -36,6 +36,8 @@ skel:
 
 staging: devices dirs skel
 
+rootfs: default-copyall-rootfs
+
 # Checking configuration
 confcheck-y := $(call confcheck-exists,$(dev_txt),MKR_BOARD)
 confcheck-y += $(call confcheck-exists,$(skeldir),MKR_BOARD)
