--- a/ltp/Makefile
+++ b/ltp/Makefile
@@ -5,9 +5,9 @@ LTP_PATH=$(shell echo $$PATH | sed 's/[^:]*distcc://g')
 sync-$(call not,$(MKR_LTP_MAINT)) := cp -a
 sync-$(MKR_LTP_MAINT) := rsync -a
 
-create-stamp := $(mkr-staging)/ltp/.mkr.dir-created
+create-stamp := $(staging)/ltp/.mkr.dir-created
 
-$(create-stamp): $(mkr-deps)
+$(create-stamp): $(deps)
 	rm -Rf $(dir $@)
 	mkdir -p $(dir $@)
 	: > $@
@@ -16,26 +16,26 @@ $(create-stamp): $(mkr-deps)
 # In maintainer mode, trigger a sync for every compilation
 ifeq ($(MKR_LTP_MAINT),y)
 do-sync: $(create-stamp)
-	$(sync-y) $(mkr-srcdir)/* $(mkr-staging)/ltp
+	$(sync-y) $(srcdir)/* $(staging)/ltp
 
-$(mkr-staging)/ltp/configure: do-sync ;
+$(staging)/ltp/configure: do-sync ;
 
 mkt-configure-args-y += --enable-maintainer-mode
 else
-$(mkr-staging)/ltp/configure: $(create-stamp)
-	$(sync-y) $(mkr-srcdir)/* $(mkr-staging)/ltp
+$(staging)/ltp/configure: $(create-stamp)
+	$(sync-y) $(srcdir)/* $(staging)/ltp
 endif
 
 compile: ;
 
 # Configure
-$(mkr-staging)/ltp/config.status: $(mkr-staging)/ltp/configure
-	cd $(dir $@) && ./configure $(mkr-configure-args-y)
+$(staging)/ltp/config.status: $(staging)/ltp/configure
+	cd $(dir $@) && ./configure $(configure-args-y)
 
 # Build & install
-staging: $(mkr-staging)/ltp/config.status
-	cd $(mkr-staging)/ltp && PATH=$(LTP_PATH) $(MAKE) \
-	CROSS_COMPILE="$(mkr-cross)" \
+staging: $(staging)/ltp/config.status
+	cd $(staging)/ltp && PATH=$(LTP_PATH) $(MAKE) \
+	CROSS_COMPILE="$(cross)" \
 	CC="$(CC) $(cflags-y)" CXX="$(CXX) $(cflags-y)"
 	for dir in \
 		testcases/bin \
@@ -43,7 +43,7 @@ staging: $(mkr-staging)/ltp/config.status
 		testcases/bin/dumpdir \
 		output \
 		results; \
-	do mkdir -p $(mkr-staging)/ltp/$$dir || exit 1; done
+	do mkdir -p $(staging)/ltp/$$dir || exit 1; done
 
 rootfs: default-copyall-rootfs
 
